# Elorts

./: .gitignore  Cargo.toml  README.md  info.txt  notes.txt  remElorts.yaml  webElorts.yaml
.github/workflows/: compileElorts.yaml
rust/: Cargo.toml
rust/src/: dweet.rs  main.rs  remElorts.rs  remind.rs  search_and_chop.rs  webElorts.rs  web_check.rs
src/: discord.rs  dweet.rs  main.rs  remind.rs  web_check.rs
