[package]
name = "Elorts"
version = "0.1.0"
authors = ["thrombe <yash.n.thombare620@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking", "json"] }
serde_json = "1.0.59"
serde = "1.0.117"
serde_derive = "1.0.117"
structopt = "0.3.22"
chrono = "0.4.19"